--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
-Django==11.2
+Django==3.2
 h11==0.14.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -11,3 +11,4 @@ python-engineio==4.9.1
 Werkzeug==3.0.4
 wsproto==1.2.0
 gunicorn==20.1.0
+whitenoise==6.7.0
